fix paragraph alignment when not in a section/block/etc

--- a/wp-content/themes/it-gets-better/_assets/css/styles.css
+++ b/wp-content/themes/it-gets-better/_assets/css/styles.css
@@ -720,6 +720,11 @@ use {
   }
 }
 
+main#main > p {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .singular_post .post_header {
   text-align: center;
   width: 90vw;
