--- a/wp-content/themes/it-gets-better/_assets/scss/base/_layout.scss
+++ b/wp-content/themes/it-gets-better/_assets/scss/base/_layout.scss
@@ -79,3 +79,10 @@ $columns: 3;
 		grid-template-columns: repeat(1, 1fr);
 	}
 }
+
+main#main {
+	> p {
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
